# shannon-the-mouse-agent

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
mouse-entropy-agent/: Cargo.toml
mouse-entropy-agent/benches/: entropy_bench.rs
mouse-entropy-agent/src/: buffer.rs  capture.rs  config.rs  emitter.rs  entropy.rs  lib.rs  main.rs  scorer.rs
mouse-entropy-agent/tests/: integration_test.rs
scripts/: check_bench_thresholds.py
