[package]
name = "mouse-entropy-agent"
version = "0.1.0"
edition = "2021"
description = "Cross-platform mouse entropy risk scoring agent"
license = "MIT"

[[bin]]
name = "mouse-entropy-agent"
path = "src/main.rs"

[lib]
name = "mouse_entropy_agent"
path = "src/lib.rs"

[dependencies]
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.14", features = ["toml"] }
crossbeam-channel = "0.5"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
